gitops/devboard/frontend-deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: devboard-frontend-deployment
  namespace: devboard
  labels:
    app: devboard-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-frontend
  strategy:
    blueGreen:
      activeService: devboard-frontend-service
      previewService: devboard-frontend-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 30
  template:
    metadata:
      labels:
        app: devboard-frontend
    spec:
      containers:
        - name: devboard-frontend
          image: trainwithshubham/devboard-frontend:sha-4945e5b
          ports:
            - containerPort: 4173
          livenessProbe:
            httpGet:
              path: /
              port: 4173
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 4173
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
