gitops/devboard/ai-service.yml
kind: Service
apiVersion: v1
metadata:
  name: ai-service
  namespace: devboard
spec:
  selector:
    app: devboard-ai-service
  ports:
    - name: http
      protocol: TCP
      port: 3005
      targetPort: 3005
