gitops/devboard/frontend-preview-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devboard-frontend-preview
  namespace: devboard
spec:
  type: NodePort
  selector:
    app: devboard-frontend
  ports:
    - port: 8080
      targetPort: 4173
