gitops/devboard/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: devboard-gateway
  namespace: devboard

spec:
  gatewayClassName: envoy

  # Use our custom EnvoyProxy configuration for THIS Gateway.
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: devboard-proxy

  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same

  - name: https
    port: 443
    protocol: HTTPS
    hostname: devboard.stackforges.com
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: devboard-tls

    allowedRoutes:
      namespaces:
        from: Same
