gitops/devboard/http_redirect.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devboard-gateway-redirect
spec:
  parentRefs:
  - name: devboard-gateway
    sectionName: http
  hostnames:
  - devboard.stackforges.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
