gitops/devboard/httproute-grafana.yml

#
# Browser:
#   https://grafana.stackforges.com
#
# Gateway:
#   devboard-gateway
#
# Listener:
#   grafana-https
#
# Backend:
#   observability-grafana:80

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: devboard

spec: 
  parentRefs:
  - name: devboard-gateway
    sectionName: grafana-https

  hostnames:
     - grafana.stackforges.com

  rules:
    -  backendRefs:
          - name: observability-grafana
            namespace: observability
            port: 80
