gitops/devboard/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devboard-http-route
  namespace: devboard
spec:
  parentRefs:
   - name: devboard-gateway
  
  # This route is ONLY for DevBoard.
  # Without this, the "/" PathPrefix can also match
  # requests intended for Grafana.
  hostnames:
    - devboard.stackforges.com
    
  rules:
  - matches:
     - path:
        type: Exact
        value: /api/ai/summarise
    filters:
       - type: URLRewrite
         urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /summarise


    backendRefs:
    - name: ai-service
      port: 3005

    timeouts:
        request: "300s"
        backendRequest: "300s"

  - matches:
     - path:
        type: Exact
        value: /api/ai/ask
    filters:
       - type: URLRewrite
         urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /ask

    backendRefs:
    - name: ai-service
      port: 3005

    timeouts:
        request: "300s"
        backendRequest: "300s"

  - matches:
     - path:
        type: Exact
        value: /api/ai/health
    filters:
       - type: URLRewrite
         urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /health

    backendRefs:
    - name: ai-service
      port: 3005


  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: devboard-frontend-service
      port: 8080
